@@ -12,6 +12,7 @@ Please add your contributions.
 	* BUGFIX: correct OpenACC
 	  pragma for SET iteration
 	  for better performance	Ludwig Schneider
+	* FIX documentation issues	Ludwig Schneider
 
 	v0.5.0 released 11/9/17
 	* first public version		Ludwig Schneider
